Issue #439: fixed transparant menu on scrolling; adjusted position of collapse arrows.

--- a/media/css/global/main.css
+++ b/media/css/global/main.css
@@ -159,4 +159,5 @@ legend
     min-height: 30px;
     border-left-width: 0px;
     border-right-width: 0px;
+    margin-top: 0px;
 }
